# ai-agent-reinforcement-learning

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: harness-engineering.md
src/agent_rl_demos/: __init__.py  cli.py  config.py  harness.py  io.py  live_openai.py  models.py  pinecone_rag.py  policies.py  registry.py  rewards.py  topic_impls.py
tests/: test_cli.py  test_config.py  test_harness.py  test_live_openai.py  test_live_smoke.py  test_rag.py  test_rewards.py  test_topics.py
topics/00_decision_matrix/: README.md  demo.py
topics/00_decision_matrix/mock_data/: cases.json
topics/01_prompting_tool_calls/: README.md  demo.py
topics/01_prompting_tool_calls/mock_data/: tool_tasks.json
topics/02_rag_pinecone/: README.md  demo.py
topics/02_rag_pinecone/mock_data/: queries.json  records.json
topics/03_sft_data_prep/: README.md  demo.py
topics/03_sft_data_prep/mock_data/: teacher_traces.json
topics/04_dpo_preference_pairs/: README.md  demo.py
topics/04_dpo_preference_pairs/mock_data/: preference_pairs.json
topics/05_rlvr_verifier_rewards/: README.md  demo.py
topics/05_rlvr_verifier_rewards/mock_data/: outputs.json
topics/06_langgraph_agent_environment/: README.md  demo.py
topics/06_langgraph_agent_environment/mock_data/: environment_tasks.json
topics/07_grpo_rollout_simulation/: README.md  demo.py
topics/07_grpo_rollout_simulation/mock_data/: rollout_tasks.json
topics/08_metrics_failure_inspection/: README.md  demo.py
topics/09_continuous_improvement_loop/: README.md  demo.py
(+2 files in other folders)
